@@ -1,3 +1,8 @@
+2006-01-17  Matthias Hopf  <mhopf@suse.de>
+
+	* src/mouse.c: (MouseDoPostEvent):
+	Bug #5071: EmulateWheelTimeout didn't work as anticipated.
+
 2006-01-09  Daniel Stone  <daniel@freedesktop.org>
 
 	* src/mouse.c:
